--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,6 +7,9 @@
 
 # The following line activates a set of recommended lints for Flutter apps,
 # packages, and plugins designed to encourage good coding practices.
+analyzer:
+  errors:
+    avoid_print: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
@@ -22,7 +25,6 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
-    - avoid_print
     - unawaited_futures
     - prefer_single_quotes
     - avoid_void_async
