--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.8.0+00800
+version: 0.9.0+00900
 
 environment:
   sdk: ^3.8.1
@@ -41,6 +41,7 @@ dependencies:
   flutter_local_notifications: ^17.1.2
   http: ^1.2.1
   flutter_dotenv: ^5.1.0
+  timezone: ^0.9.4
 
 dev_dependencies:
   flutter_test:
