--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.10.0+001000
+version: 0.11.0+001100
 
 environment:
   sdk: ^3.8.1
@@ -38,10 +38,12 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   geolocator: ^12.0.0
+  geocoding: ^3.0.0
   flutter_local_notifications: ^17.1.2
   http: ^1.2.1
   flutter_dotenv: ^5.1.0
   timezone: ^0.9.4
+  flutter_tts: ^4.0.2
 
 dev_dependencies:
   flutter_test:
