ref: Update codebase to replace OpenWeatherMap API key references with Tomorrow.io API key

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-# OpenWeatherMap API Configuration
-# Get your free API key from: https://openweathermap.org/api
-# Copy this file to .env and replace 'your_api_key_here' with your actual API key
-OPENWEATHER_API_KEY=your_api_key_here
+# Environment variables for Day Break
+# Copy this file to .env and fill in the values. NEVER commit the real .env file.
+
+# Tomorrow.io Weather API Key (New)
+# Sign up at: https://www.tomorrow.io/ to obtain a key.
+# Used for fetching weather data (realtime/forecast). Required.
+TOMORROWIO_API_KEY=your_tomorrow_io_key_here
