Testing Readme tip

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   timezone: ^0.10.1
   flutter_tts: ^4.0.2
   flutter_background_service: ^5.1.0
+  announcement_scheduler: ^1.1.0
 
 dev_dependencies:
   flutter_test:
